se finalizo tp con mediaquerie

--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:200,300,400,600&display=swap" rel="stylesheet"> 
 </head>
 <body>
   <div class="container">
     <div class="container_left">
-      <img src="images/logo.svg">
-      <h1><span class="title_left">We're </span> coming soon</h1>
+      <img class="logo_left" src="images/logo.svg">
+      <img  class ="hero-mobile" src="images/hero-mobile.jpg">
+      <h1 class="title_left">We're <span class="title_left_sub">coming soon</span></h1>
       <p class="parrafo_left">
           Hello fellow shoppers! We're currently building our new fashion store. 
           Add your email below to stay up-to-date with announcements and our launch deals.
       </p>
-      <form action="">
-        <label for="email">
-          <input type="email" name="email" id="email" placeholder="Email Address" />
-        </label>
-        <button> <img src="images/icon-arrow.svg" alt="">
-        </button>
+      <form  class="form_left"action="">
+       <input class="label_left"  type="email" name="email" id="email" placeholder="Email Address" />
+       <button class="btn_left">
+        <img src="images/icon-arrow.svg" alt="">
+      </button>
       </form>
    </div>
     <div class="rigth_container">
